Improved readability and corrected spelling mistakes